# fp-labs

./: README.md
lab1/: app.cabal  build.sh  cabal.project.local  db.sql
lab1/app/: Main.hs
lab1/src/App/: CLI.hs  DB.hs  Queries.hs  Types.hs  UI.hs
lab2/: app.cabal
