cabal-version:       3.8
name:                lab1
version:             0.1.0.0
build-type:          Simple

executable lab1
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N

  include-dirs:
    /opt/homebrew/opt/libpq/include
    /opt/homebrew/opt/openssl@3/include

  extra-lib-dirs:
    /opt/homebrew/opt/libpq/lib
    /opt/homebrew/opt/openssl@3/lib

  extra-libraries:
    pq
    ssl
    crypto
    gssapi_krb5

  ld-options:
    -Wl,-rpath,/opt/homebrew/opt/libpq/lib
    -Wl,-rpath,/opt/homebrew/opt/openssl@3/lib

  build-depends:
      base >=4.14 && <5
    , bytestring
    , text
    , time
    , directory
    , postgresql-simple >=0.6
    , ansi-terminal >=0.11 && <1.1
