cabal-version:       3.8
name:                lab2
version:             0.1.0.0
build-type:          Simple

executable lab2
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -O2 -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.14 && <5
    , time
    , parallel
    , deepseq
    , directory
    , ansi-terminal >=0.11 && <1.1
